# locveil-voice

./: .flake8  .gitignore  .repin.toml  .scope-guard.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.aarch64  Dockerfile.armv7  Dockerfile.x86_64  README-BUILD.md  README-DOCKER.md  README.md  UV_MIGRATION.md  config-example.toml  install-irene.sh  irene_current.md  mypy.ini  plugin_refactor.md  pyproject.toml  pyrightconfig.json  refactoring.md  sitecustomize.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: backend-health.yml  ci.yml  config-validation.yml  frontend-health.yml
ESP32/docs/: GETTING_STARTED.md  README_INT8_UPGRADE.md  irene_firmware.md
ESP32/firmware/: GETTING_STARTED.md
ESP32/wakeword_training/: README.md  USAGE_EXAMPLE.md  pyproject.toml
ESP32/wakeword_training/configs/: .gitkeep
ESP32/wakeword_training/firmware/: .gitkeep
ESP32/wakeword_training/models/: .gitkeep
ESP32/wakeword_training/scripts/: __init__.py  record_samples.py  train_model.sh
assets/: donation_contract_v1.1.json  donation_language_v1.1.json  v1.0.json
assets/donations/: audio_playback_handler.json  conversation.json  datetime.json  greetings.json  provider_control_handler.json  random_handler.json  speech_recognition_handler.json  system.json  system_service_handler.json  text_enhancement_handler.json  timer.json  train_schedule.json  translation_handler.json  voice_synthesis_handler.json
assets/web/: README.md
backend/: pyproject.toml
backend/src/locveil_voice/components/: asr_component.py  audio_component.py  base.py  configuration_component.py  intent_component.py  llm_component.py  nlu_component.py  text_processor_component.py  tts_component.py  voice_trigger_component.py
backend/src/locveil_voice/config/: __init__.py  auto_registry.py  manager.py  models.py  schemas.py  validator.py
backend/src/locveil_voice/core/: assets.py  components.py  contract_validator.py  intent_asset_loader.py  startup_validation.py  trace_context.py  workflow_manager.py
backend/src/locveil_voice/inputs/: manager.py  microphone.py
backend/src/locveil_voice/intents/: manager.py
backend/src/locveil_voice/intents/handlers/: audio_playback_handler.py  base.py  conversation.py  smart_home.py  speech_recognition_handler.py  text_enhancement_handler.py  translation_handler.py  voice_synthesis_handler.py
backend/src/locveil_voice/providers/llm/: deepseek.py
backend/src/locveil_voice/runners/: base.py  web_server.py
backend/src/locveil_voice/tools/: build_analyzer.py  config_validator_cli.py  dependency_validator.py  replay_trace.py
backend/src/locveil_voice/utils/: audio_helpers.py  entry_points.py  llm_capabilities.py  loader.py  namespaces.py
backend/src/locveil_voice/workflows/: audio_processor.py
backend/tests/: test_arch32_report_delivery.py  test_arch36_satellite.py  test_arch_gate.py  test_audio_negotiator.py  test_coherence_guard.py  test_config_schemas.py  test_core_py_pin_identity.py  test_import_contracts.py  test_intent_enable_disable.py  test_llm_budget.py  test_llm_capabilities.py  test_llm_fallback.py  test_master_config_completeness_toplevel.py  test_master_config_field_alignment.py  test_parameter_schema_unification.py  test_replay_trace_coverage.py  test_report_protocol_conformance.py  test_smart_home_ambiguity.py  test_smoke_e2e.py  test_trace_format_version.py  test_trace_replay.py  test_vad_assets.py  test_vad_providers.py  test_web_server_logging.py
config/: config-example.md  config-example.toml  config-master.toml  embedded-aarch64-en.toml  embedded-aarch64.toml  embedded-armv7-en.toml  embedded-armv7.toml  full.toml  satellite.toml  standalone-x86_64-en.toml  standalone-x86_64.toml  vad-development.toml  vad-production.toml  vad-testing.toml  vosk-test.toml
config-ui/: Dockerfile  README.md  docker-entrypoint.sh  eslint.config.mjs  index.html  nginx.conf  openapi.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
config-ui/docs/: donation_editor_ux.md  i18n_retrofit_spec.md  interface_design.md  nlu_improvements.md
configs/: api-only.toml  config-example.md  config-example.toml  config-master.toml  development.toml  embedded-aarch64-en.toml  embedded-aarch64.toml  embedded-armv7-en.toml  embedded-armv7.toml  full.toml  minimal.toml  monitoring-example.toml  satellite.toml  standalone-x86_64-en.toml  standalone-x86_64.toml  vad-development.toml  vad-production.toml  vad-sibilant-fix.toml  vad-testing.toml  voice.toml  vosk-test.toml
contracts/: README.md
docker/: Dockerfile.aarch64  Dockerfile.armv7  Dockerfile.x86_64  derive_build_reqs.py
docs/: ASSET_MANAGEMENT.md  CLIENT_REGISTRY.md  IDE_SETUP.md  MODEL_WARMUP.md  PHASE3_INTEGRATION.md  PIPELINE_IMPLEMENTATION.md  QUICKSTART.md  RELEASE_JOURNAL.md  RELEASE_PLAN.md  RELEASE_PLAN_DONE.md  TODO.md  UV_MIGRATION.md  architecture.md  architecture_intents.md  component_loading.md  config_schemas.md  configuration_cleanup.md  configuration_guide.md  dependency_harmonization.md  donations_flow.md  env-example.txt  fire_forget_issues.md  intent_donation.md  intent_implementation.md  intent_mqtt.md  language_support.md  manifest.json  metrics_unification.md  refactoring.md  train_schedule_handler.md  unify_context.md  unify_sessions.md  voice_trigger.md
docs/TODO/: TODO05.md  (+6 more)
eval/: Makefile  README.md  cli.promptfooconfig.yaml  device.promptfooconfig.yaml  device.tests.yaml  promptfooconfig.yaml  trace.promptfooconfig.yaml  ws.promptfooconfig.yaml
hooks/: pre-commit
irene/: __init__.py  __version__.py
nginx/: README.md
ops/: INSTALL.md  cutover-env-locveil-voice.sh  docker-compose.yml  locveil-voice.service  migrate-to-locveil.sh  update.sh  wb-mqtt-voice.service
scripts/: batch_cross_language_validation.py  check_no_type_checking.py  check_scope.py  contract_guard.py  eval_llm_nlu.py  eval_llm_nlu_cases.yaml  install_sqlite_shim.sh  migrate_donations_v11.py  repin.py  scope_guard.py
tools/: generate_schemas.py  migrate_runners.py  migrate_to_universal_plugins.py
wake_word_training/: README.md  USAGE_EXAMPLE.md  __init__.py
(+761 files in other folders)
