[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irene-voice-assistant"
dynamic = ["version"]
description = "Irene - Modern async voice assistant with optional components. Supports plugins and flexible deployment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core async framework (minimal dependencies)
    "python-dateutil>=2.8.0", # Fixed: Updated to be compatible with pandas/matplotlib
    # Configuration and validation (now required)
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tomli-w>=1.0.0", # For TOML writing support
    "tomlkit>=0.12.0", # For comment-preserving TOML round-trip editing
    # Logging and utilities
    "termcolor>=1.1.0",
    # NLU fuzzy matching (JSON donation system requirement)
    "rapidfuzz>=3.0.0",
    "jsonschema>=4.25.0",
    "prompt-toolkit>=3.0.51",
    "aiohttp>=3.12.15",
    "numpy<2",
]

[project.optional-dependencies]
# Audio input components
audio-input = [
    "vosk>=0.3.45",
    "sounddevice>=0.4.0",
    "soundfile>=0.12.0"
]

# Advanced ASR providers
advanced-asr = [
    "openai-whisper>=20230314",
    "torch>=1.13.0",  # Required by Whisper
    "torchaudio>=0.13.0"  # Required by Whisper
]

# Enhanced audio input with cloud providers
audio-input-enhanced = [
    "irene-voice-assistant[audio-input,cloud-asr]"
]

# Complete audio input with all ASR providers
audio-input-complete = [
    "irene-voice-assistant[audio-input,cloud-asr,advanced-asr]"
]

# TTS output components
tts = [
    "pyttsx3>=2.90",
    "elevenlabs>=1.0.3",
    "httpx>=0.25.0",
    "vosk-tts>=0.3.0", # VOSK TTS for high-quality Russian multi-speaker synthesis
]

# Audio output components
audio-output = [
    "sounddevice>=0.4.0",
    "soundfile>=0.12.0",
    "audioplayer>=0.6.0",
    # "simpleaudio>=1.0.4",  # Temporarily disabled due to compilation issues with custom OpenSSL
    "numpy>=1.21.0",
    "librosa>=0.10.0",  # For high-quality audio resampling in audio_helpers.py
]

# Voice trigger (wake word detection)
voice-trigger = [
    "numpy>=1.21.0",
    "tflite-runtime>=2.12.0", # Lightweight runtime for microWakeWord (~50MB vs ~800MB tensorflow)
    "aiohttp>=3.8.0", # Required for asset management model downloads
    "openwakeword>=0.6.0",
]

# Web API components
web-api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "websockets>=11.0.0",
    "python-multipart>=0.0.6",  # Required for file uploads in Audio/ASR endpoints
]

# Cloud ASR components
cloud-asr = [
    "google-cloud-speech>=2.20.0",
    "google-auth>=2.17.0",
]

# LLM (Large Language Model) components
llm = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
]

# NLU (Natural Language Understanding) components - Phase 1: Multi-model support
nlu = [
    "spacy>=3.8.0",
    "numpy>=1.21.0",  # Required for intent centroids and vector operations
    # Phase 1: Multi-language model support - Russian models (in preference order)
    "ru_core_news_md @ https://github.com/explosion/spacy-models/releases/download/ru_core_news_md-3.8.0/ru_core_news_md-3.8.0-py3-none-any.whl",
    "ru_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.8.0/ru_core_news_sm-3.8.0-py3-none-any.whl",
    # Phase 1: Multi-language model support - English models (in preference order)
    "en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"
]

# Configuration management
config-writing = [
    # tomli-w moved to core dependencies
]

# Text processing and multilingual support.
# Number→words normalization uses ovos-number-parser (the maintained OpenVoiceOS successor of the
# abandoned MycroftAI lingua-franca — QUAL-13/ASSET-3, 2026-06-03). Pure-Python (no armv7 wheel
# concern), ru+en. Optional: irene/utils/text_processing.py keeps a pure-Python Russian fallback
# (num_to_text_ru) so the ru path works even without this extra installed.
text-multilingual = [
    "ovos-number-parser>=0.5.1",
    "runorm>=0.1.0",
    "eng-to-ipa>=0.0.2",
]

# Note: wake-word-training dependencies moved to separate project

# Development dependencies - Fixed: Removed duplication
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0", 
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy==1.15.0",  # Pinned to match wb-mqtt-bridge version
    "import-linter>=2.0",  # ARCH-5: enforce the hexagon import contracts
]

# Convenience groups - Fixed: Re-enabled with proper dependencies
# Full voice assistant
voice = [
    "irene-voice-assistant[audio-input,tts,audio-output,voice-trigger,nlu,web-api,text-multilingual,config-writing]"
]

# API server only
api = [
    "irene-voice-assistant[web-api,config-writing]"
]

# Headless mode (text processing only)
headless = [
    "irene-voice-assistant[config-writing]"
]

# All optional components - Fixed: Re-enabled
all = [
    "irene-voice-assistant[voice,cloud-asr,advanced-asr,llm]"
]

[project.scripts]
# Configuration and build management tools
irene-config-migrate = "irene.tools.config_migrator:main"
irene-config-validate = "irene.tools.config_validator_cli:main"
irene-build-analyze = "irene.tools.build_analyzer:main"
irene-dependency-validate = "irene.tools.dependency_validator:main"
irene-intent-validate = "irene.tools.intent_validator:main"

# Audio and VAD testing tools
irene-vad-recording-test = "irene.tools.vad_recording_test:cli_main"

# Main runners
irene-cli = "irene.runners.cli:run_cli"
irene-webapi = "irene.runners.webapi_runner:run_webapi"
irene-vosk = "irene.runners.vosk_runner:run_vosk"

# ============================================================
# ENTRY-POINTS CATALOG - Provider Discovery System
# ============================================================
# Entry-points catalog for dynamic provider discovery.
# This replaces hardcoded _provider_classes dictionaries and enables:
# - Configuration-driven loading
# - External package extensibility
# - Build-time optimization
# - Dynamic discovery without hardcoded imports

[project.entry-points."irene.providers.audio"]
console = "irene.providers.audio.console:ConsoleAudioProvider"
sounddevice = "irene.providers.audio.sounddevice:SoundDeviceAudioProvider"
audioplayer = "irene.providers.audio.audioplayer:AudioPlayerAudioProvider"
aplay = "irene.providers.audio.aplay:AplayAudioProvider"
simpleaudio = "irene.providers.audio.simpleaudio:SimpleAudioProvider"

[project.entry-points."irene.providers.tts"]
console = "irene.providers.tts.console:ConsoleTTSProvider"
pyttsx = "irene.providers.tts.pyttsx:PyttsTTSProvider"
silero_v3 = "irene.providers.tts.silero_v3:SileroV3TTSProvider"
silero_v4 = "irene.providers.tts.silero_v4:SileroV4TTSProvider"
vosk_tts = "irene.providers.tts.vosk:VoskTTSProvider"
elevenlabs = "irene.providers.tts.elevenlabs:ElevenLabsTTSProvider"

[project.entry-points."irene.providers.asr"]
vosk = "irene.providers.asr.vosk:VoskASRProvider"
whisper = "irene.providers.asr.whisper:WhisperASRProvider"
google_cloud = "irene.providers.asr.google_cloud:GoogleCloudASRProvider"

[project.entry-points."irene.providers.llm"]
console = "irene.providers.llm.console:ConsoleLLMProvider"
deepseek = "irene.providers.llm.deepseek:DeepSeekLLMProvider"
openai = "irene.providers.llm.openai:OpenAILLMProvider"
anthropic = "irene.providers.llm.anthropic:AnthropicLLMProvider"

[project.entry-points."irene.providers.voice_trigger"]
openwakeword = "irene.providers.voice_trigger.openwakeword:OpenWakeWordProvider"
microwakeword = "irene.providers.voice_trigger.microwakeword:MicroWakeWordProvider"

[project.entry-points."irene.providers.nlu"]
hybrid_keyword_matcher = "irene.providers.nlu.hybrid_keyword_matcher:HybridKeywordMatcherProvider"
spacy_nlu = "irene.providers.nlu.spacy_provider:SpaCyNLUProvider"

[project.entry-points."irene.providers.text_processing"]
# QUAL-13: one config-driven processor (per-stage normalizer chains) replaced the 4 stage-specific
# providers (asr/general/tts/number), which were decorative routing around one number call.
unified_text_processor = "irene.providers.text_processing.unified:UnifiedTextProcessor"

[project.entry-points."irene.components"]
tts = "irene.components.tts_component:TTSComponent"
asr = "irene.components.asr_component:ASRComponent"
llm = "irene.components.llm_component:LLMComponent"
audio = "irene.components.audio_component:AudioComponent"
voice_trigger = "irene.components.voice_trigger_component:VoiceTriggerComponent"
nlu = "irene.components.nlu_component:NLUComponent"
text_processor = "irene.components.text_processor_component:TextProcessorComponent"
intent_system = "irene.components.intent_component:IntentComponent"
monitoring = "irene.components.monitoring_component:MonitoringComponent"
configuration = "irene.components.configuration_component:ConfigurationComponent"
nlu_analysis = "irene.components.nlu_analysis_component:NLUAnalysisComponent"

[project.entry-points."irene.workflows"]
unified_voice_assistant = "irene.workflows.voice_assistant:UnifiedVoiceAssistantWorkflow"

[project.entry-points."irene.intents.handlers"]
conversation = "irene.intents.handlers.conversation:ConversationIntentHandler"
greetings = "irene.intents.handlers.greetings:GreetingsIntentHandler"
timer = "irene.intents.handlers.timer:TimerIntentHandler"
datetime = "irene.intents.handlers.datetime:DateTimeIntentHandler"
system = "irene.intents.handlers.system:SystemIntentHandler"
random_handler = "irene.intents.handlers.random_handler:RandomIntentHandler"
system_service_handler = "irene.intents.handlers.system_service_handler:SystemServiceIntentHandler"
audio_playback_handler = "irene.intents.handlers.audio_playback_handler:AudioPlaybackIntentHandler"
translation_handler = "irene.intents.handlers.translation_handler:TranslationIntentHandler"
text_enhancement_handler = "irene.intents.handlers.text_enhancement_handler:TextEnhancementIntentHandler"
voice_synthesis_handler = "irene.intents.handlers.voice_synthesis_handler:VoiceSynthesisIntentHandler"
provider_control_handler = "irene.intents.handlers.provider_control_handler:ProviderControlIntentHandler"
speech_recognition_handler = "irene.intents.handlers.speech_recognition_handler:SpeechRecognitionIntentHandler"

[project.entry-points."irene.inputs"]
cli = "irene.inputs.cli:CLIInput"
microphone = "irene.inputs.microphone:MicrophoneInput"
web = "irene.inputs.web:WebInput"



# NOTE: Builtin plugins section removed - no builtin plugins in unified architecture
# All functionality moved to intent handlers with JSON donations

[project.entry-points."irene.runners"]
cli = "irene.runners.cli:CLIRunner"
vosk = "irene.runners.vosk_runner:VoskRunner"
webapi = "irene.runners.webapi_runner:WebAPIRunner"

[tool.setuptools.packages.find]
where = ["."]
include = ["irene*"]
# Fixed: Removed references to non-existent directories
exclude = []

# Fixed: Removed duplicate dev-dependencies section
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
# Fixed: Removed references to non-existent directories
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["irene/tests", "tools"]
# pytest-asyncio: treat bare `async def test_*` as asyncio tests (the suite predates
# pytest-asyncio's strict default; without this ~23 async tests error as "not natively supported").
asyncio_mode = "auto"
filterwarnings = [
    # Pydantic V1-style @validator / class Config across the config + donation models is known
    # tech debt (separate migration); silence the deprecation flood so real signal is visible.
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

# ARCH-5: Hexagonal import contracts (enforced via `lint-imports` and irene/tests/test_import_contracts.py).
# Encodes the rules ARCH-1..4 established so the architecture can't silently regress.
[tool.importlinter]
root_package = "irene"

[[tool.importlinter.contracts]]
name = "Domain (intents) depends on nothing outward (ARCH-1)"
type = "forbidden"
source_modules = ["irene.intents"]
forbidden_modules = [
    "irene.components",
    "irene.workflows",
    "irene.providers",
    "irene.web_api",
    "irene.runners",
    "irene.inputs",
]
ignore_imports = [
    # KNOWN DEBT (QUAL-24): 8 handlers fetch components via `from ...core.engine import get_core`
    # (service-locator) instead of DI, which transitively pulls the domain into core.engine's
    # composition root. Ignored here so the contract still enforces the DIRECT domain-clean rule;
    # the get_core()->DI refactor is tracked as QUAL-24.
    "irene.intents.handlers.* -> irene.core.engine",
]

[[tool.importlinter.contracts]]
name = "Config has no upward imports (ARCH-2)"
type = "forbidden"
source_modules = ["irene.config"]
forbidden_modules = [
    "irene.core",
    "irene.components",
    "irene.providers",
    "irene.workflows",
    "irene.web_api",
    "irene.runners",
    "irene.inputs",
    "irene.intents",
]

[[tool.importlinter.contracts]]
name = "Components (application) don't import delivery (ARCH-3)"
type = "forbidden"
source_modules = ["irene.components"]
forbidden_modules = [
    "irene.web_api",
    "irene.runners",
    "irene.inputs",
]

[[tool.importlinter.contracts]]
name = "Only nlu_analysis may import the analysis tooling (ARCH-3)"
type = "forbidden"
source_modules = ["irene.components"]
forbidden_modules = ["irene.analysis"]
ignore_imports = [
    "irene.components.nlu_analysis_component -> irene.analysis.*",
]

[[tool.importlinter.contracts]]
name = "Adapters (providers) don't import application (ARCH-4)"
type = "forbidden"
source_modules = ["irene.providers"]
forbidden_modules = [
    "irene.components",
    "irene.workflows",
]

[[tool.importlinter.contracts]]
name = "Provider categories are independent of each other (ARCH-4)"
type = "independence"
modules = [
    "irene.providers.asr",
    "irene.providers.tts",
    "irene.providers.audio",
    "irene.providers.llm",
    "irene.providers.nlu",
    "irene.providers.voice_trigger",
    "irene.providers.text_processing",
]

[[tool.importlinter.contracts]]
# ARCH-6/SCC-2: the input PORT module must not import its concrete adapters (no base⇄subclass cycle,
# no service-locator). The InputManager orchestrator lives in irene.inputs.manager, which is the input
# layer's composition point and legitimately depends outward on the adapters.
name = "Input port does not import its adapters (ARCH-6 / SCC-2)"
type = "forbidden"
source_modules = ["irene.inputs.base"]
forbidden_modules = [
    "irene.inputs.cli",
    "irene.inputs.microphone",
    "irene.inputs.web",
    "irene.inputs.manager",
]

[tool.mypy]
# Basic settings - detailed configuration in mypy.ini (matching wb-mqtt-bridge)
python_version = "3.11"

[tool.pyright]
# Pylance configuration to match mypy.ini relaxed settings
include = ["irene"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportArgumentType = false
reportAssignmentType = false
reportAttributeAccessIssue = false
reportGeneralTypeIssues = false
reportIndexIssue = false

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-pillow>=10.2.0.20240822",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.4.20250611",
    "types-setuptools>=80.9.0.20250801",
    "types-urllib3>=1.26.25.14",
]

[tool.setuptools.dynamic]
version = {attr = "irene.__version__.__version__"}
