[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irene-voice-assistant"
dynamic = ["version"]
description = "Irene - Modern async voice assistant with optional components. Supports plugins and flexible deployment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core async framework (minimal dependencies)
    "python-dateutil>=2.8.0", # Fixed: Updated to be compatible with pandas/matplotlib
    # Configuration and validation (now required)
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tomli-w>=1.0.0", # For TOML writing support
    "tomlkit>=0.12.0", # For comment-preserving TOML round-trip editing
    # Logging and utilities
    "termcolor>=1.1.0",
    "pyyaml>=6.0",  # used in core runtime (webapi_router, intent_asset_loader, NLU) — was only transitive
    # NLU fuzzy matching (JSON donation system requirement)
    "rapidfuzz>=3.0.0",
    "jsonschema>=4.25.0",
    "prompt-toolkit>=3.0.51",
    "aiohttp>=3.12.15",
    "numpy<2",
]

[project.optional-dependencies]
# Audio input components
audio-input = [
    "vosk>=0.3.45",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0"
]

# Advanced ASR providers
advanced-asr = [
    "openai-whisper>=20230314",
    "torch>=1.13.0",  # Required by Whisper
    "torchaudio>=0.13.0"  # Required by Whisper
]
# sherpa-onnx ASR (ARCH-10): the alphacep VOSK Zipformer2 ONNX family. NO torch.
# Per-arch version split lives in the PEP 508 markers (uv evaluates them per build target):
#   - armv7 (WB7): the self-contained 1.10.46 — newer wheels fail the WB7 ELF-alignment check, and it
#     bundles its onnxruntime in the main wheel.
#   - everything else (x86_64 / aarch64 / win_amd64 / macos): latest. Since 1.13 the native libraries
#     (onnxruntime + the C-API .so) ship in a SEPARATE `sherpa-onnx-core` wheel; without it the
#     extension can't load `libonnxruntime.so` (it is NOT bundled in the main wheel any more). Pull both
#     with matching markers — this is what made sherpa work on 64-bit/Windows, not just armv7.
asr-onnx = [
    "sherpa-onnx==1.10.46; platform_machine=='armv7l'",
    "sherpa-onnx>=1.13; platform_machine!='armv7l'",
    "sherpa-onnx-core>=1.13; platform_machine!='armv7l'",
]

# Enhanced audio input with cloud providers
audio-input-enhanced = [
    "irene-voice-assistant[audio-input,cloud-asr]"
]

# Complete audio input with all ASR providers
audio-input-complete = [
    "irene-voice-assistant[audio-input,cloud-asr,advanced-asr]"
]

# TTS output components
tts = [
    "pyttsx3>=2.90",
    "elevenlabs>=1.0.3",
    "httpx>=0.25.0",
    "vosk-tts>=0.3.0", # VOSK TTS for high-quality Russian multi-speaker synthesis
]

# Audio output components. ARCH-20: streamable-only backends — sounddevice (RawOutputStream, cross-OS),
# aplay (ALSA stdin, Linux), miniaudio (self-contained, bundled WASAPI/CoreAudio/ALSA, cross-OS incl. RPi).
# Dropped audioplayer (file-only) + simpleaudio (archived, WAV-buffer-only) — neither can stream raw PCM.
audio-output = [
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0",
    "miniaudio>=1.59",
    "numpy>=1.21.0",
    "librosa>=0.10.0",  # For high-quality audio resampling in audio_helpers.py
]

# Wake word detection. 64-bit only — the WB7/armv7 satellite wakes on-device (ESP32). Two provider
# families, each its own extra (contribution principle); `voice-trigger` is the both-families umbrella.
#   openWakeWord  → wake-onnx  (ONNX runtime, no torch)
#   microWakeWord → wake-tflite (pymicro-wakeword: micro frontend + bundled tflite C lib; ESP32-unified)
wake-onnx = [
    "numpy>=1.21.0",
    "openwakeword>=0.6.0",
    "onnxruntime>=1.15.0",
    "aiohttp>=3.8.0", # Required for asset management model downloads
]
# pymicro-wakeword ships wheels for x86_64 / aarch64 / win_amd64 / macos — NO armv7 (which is correct:
# the WB7 wakes on-device on the ESP32, never server-side here). The marker keeps the extra installable
# on armv7 (it just resolves to nothing there) instead of failing on a missing wheel.
wake-tflite = [
    "numpy>=1.21.0",
    "pymicro-wakeword>=2.0.0; platform_machine != 'armv7l'",
    "aiohttp>=3.8.0",
]
# microVAD (pymicro-vad) — the 'microvad' VAD engine; self-contained (bundles model + tflite C lib),
# shares the micro frontend with wake-tflite. pymicro-vad ships wheels for **Linux x86_64/aarch64 only**
# (no Windows/macOS/armv7), so the marker scopes it there; on other targets use energy or silero VAD.
vad-tflite = [
    "pymicro-vad>=2.0.0; sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')",
]
voice-trigger = [
    "irene-voice-assistant[wake-onnx,wake-tflite]",
]

# Web API components
web-api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "websockets>=11.0.0",
    "python-multipart>=0.0.6",  # Required for file uploads in Audio/ASR endpoints
]

# Cloud ASR components
cloud-asr = [
    "google-cloud-speech>=2.20.0",
    "google-auth>=2.17.0",
]

# LLM (Large Language Model) components
llm = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
]

# NLU (Natural Language Understanding) components - Phase 1: Multi-model support
nlu = [
    "spacy>=3.8.0",
    "numpy>=1.21.0",  # Required for intent centroids and vector operations
    # Phase 1: Multi-language model support - Russian models (in preference order)
    "ru_core_news_md @ https://github.com/explosion/spacy-models/releases/download/ru_core_news_md-3.8.0/ru_core_news_md-3.8.0-py3-none-any.whl",
    "ru_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.8.0/ru_core_news_sm-3.8.0-py3-none-any.whl",
    # Phase 1: Multi-language model support - English models (in preference order)
    "en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"
]

# Configuration management
config-writing = [
    # tomli-w moved to core dependencies
]

# Text processing and multilingual support.
# Number→words normalization uses ovos-number-parser (the maintained OpenVoiceOS successor of the
# abandoned MycroftAI lingua-franca — QUAL-13/ASSET-3, 2026-06-03). Pure-Python (no armv7 wheel
# concern), ru+en. Optional: irene/utils/text_processing.py keeps a pure-Python Russian fallback
# (num_to_text_ru) so the ru path works even without this extra installed.
text-multilingual = [
    "ovos-number-parser>=0.5.1",
    "runorm>=0.1.0",
    "eng-to-ipa>=0.0.2",
]

# Note: wake-word-training dependencies moved to separate project

# Development dependencies — single opt-in source (install via `--extra dev`).
# Consolidated 2026-06-04: the former [dependency-groups].dev (PEP 735, auto-installed
# by uv) duplicated mypy and split the toolchain; folded its type stubs in here so a
# bare `uv sync` is runtime-only and `--extra dev` is the complete dev toolchain.
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy==1.15.0",  # Pinned to match wb-mqtt-bridge version
    "pyright==1.1.410",  # QUAL-4: pinned — the standard-mode gate; diagnostics vary by version
    "import-linter>=2.0",  # ARCH-5: enforce the hexagon import contracts
    # QUAL-32 / Invariant #9: the no-TYPE_CHECKING AST gate, now upstream (extracted from this repo).
    # Pinned — diagnostics/behaviour are an explicit-bump choice. Provides `check-no-type-checking` on PATH.
    "py-dev-gates @ git+https://github.com/droman42/py-dev-gates@v0.1.1",
    # type stubs (were in [dependency-groups].dev)
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-pillow>=10.2.0.20240822",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.4.20250611",
    "types-setuptools>=80.9.0.20250801",
    "types-urllib3>=1.26.25.14",
]

# Convenience groups - Fixed: Re-enabled with proper dependencies
# Full voice assistant
voice = [
    "irene-voice-assistant[audio-input,tts,audio-output,voice-trigger,nlu,web-api,text-multilingual,config-writing]"
]

# API server only
api = [
    "irene-voice-assistant[web-api,config-writing]"
]

# Headless mode (text processing only)
headless = [
    "irene-voice-assistant[config-writing]"
]

# All optional components - Fixed: Re-enabled
all = [
    "irene-voice-assistant[voice,cloud-asr,advanced-asr,asr-onnx,llm]"
]

[project.scripts]
# Configuration and build management tools
irene-config-migrate = "irene.tools.config_migrator:main"
irene-config-validate = "irene.tools.config_validator_cli:main"
irene-build-analyze = "irene.tools.build_analyzer:main"
irene-dependency-validate = "irene.tools.dependency_validator:main"

# Audio and VAD testing tools
irene-vad-recording-test = "irene.tools.vad_recording_test:cli_main"

# Main runners
irene-cli = "irene.runners.cli:run_cli"
irene-webapi = "irene.runners.webapi_runner:run_webapi"
irene-vosk = "irene.runners.vosk_runner:run_vosk"

# ============================================================
# ENTRY-POINTS CATALOG - Provider Discovery System
# ============================================================
# Entry-points catalog for dynamic provider discovery.
# This replaces hardcoded _provider_classes dictionaries and enables:
# - Configuration-driven loading
# - External package extensibility
# - Build-time optimization
# - Dynamic discovery without hardcoded imports

[project.entry-points."irene.providers.audio"]
console = "irene.providers.audio.console:ConsoleAudioProvider"
sounddevice = "irene.providers.audio.sounddevice:SoundDeviceAudioProvider"
aplay = "irene.providers.audio.aplay:AplayAudioProvider"
miniaudio = "irene.providers.audio.miniaudio:MiniaudioAudioProvider"

[project.entry-points."irene.providers.tts"]
console = "irene.providers.tts.console:ConsoleTTSProvider"
pyttsx = "irene.providers.tts.pyttsx:PyttsTTSProvider"
silero_v3 = "irene.providers.tts.silero_v3:SileroV3TTSProvider"
silero_v4 = "irene.providers.tts.silero_v4:SileroV4TTSProvider"
vosk_tts = "irene.providers.tts.vosk:VoskTTSProvider"
elevenlabs = "irene.providers.tts.elevenlabs:ElevenLabsTTSProvider"

[project.entry-points."irene.providers.asr"]
vosk = "irene.providers.asr.vosk:VoskASRProvider"
whisper = "irene.providers.asr.whisper:WhisperASRProvider"
google_cloud = "irene.providers.asr.google_cloud:GoogleCloudASRProvider"
sherpa_onnx = "irene.providers.asr.sherpa_onnx:SherpaOnnxASRProvider"

[project.entry-points."irene.providers.llm"]
console = "irene.providers.llm.console:ConsoleLLMProvider"
deepseek = "irene.providers.llm.deepseek:DeepSeekLLMProvider"
openai = "irene.providers.llm.openai:OpenAILLMProvider"
anthropic = "irene.providers.llm.anthropic:AnthropicLLMProvider"

[project.entry-points."irene.providers.voice_trigger"]
openwakeword = "irene.providers.voice_trigger.openwakeword:OpenWakeWordProvider"
microwakeword = "irene.providers.voice_trigger.microwakeword:MicroWakeWordProvider"

[project.entry-points."irene.providers.vad"]
energy = "irene.providers.vad.energy:EnergyVADProvider"
silero = "irene.providers.vad.silero:SileroVADProvider"
microvad = "irene.providers.vad.microvad:MicroVADProvider"

[project.entry-points."irene.providers.nlu"]
hybrid_keyword_matcher = "irene.providers.nlu.hybrid_keyword_matcher:HybridKeywordMatcherProvider"
spacy_nlu = "irene.providers.nlu.spacy_provider:SpaCyNLUProvider"

[project.entry-points."irene.providers.text_processor"]
# QUAL-13: one config-driven processor (per-stage normalizer chains) replaced the 4 stage-specific
# providers (asr/general/tts/number), which were decorative routing around one number call.
unified_text_processor = "irene.providers.text_processor.unified:UnifiedTextProcessor"

[project.entry-points."irene.components"]
tts = "irene.components.tts_component:TTSComponent"
asr = "irene.components.asr_component:ASRComponent"
llm = "irene.components.llm_component:LLMComponent"
audio = "irene.components.audio_component:AudioComponent"
voice_trigger = "irene.components.voice_trigger_component:VoiceTriggerComponent"
nlu = "irene.components.nlu_component:NLUComponent"
text_processor = "irene.components.text_processor_component:TextProcessorComponent"
intent_system = "irene.components.intent_component:IntentComponent"
monitoring = "irene.components.monitoring_component:MonitoringComponent"
configuration = "irene.components.configuration_component:ConfigurationComponent"
nlu_analysis = "irene.components.nlu_analysis_component:NLUAnalysisComponent"

[project.entry-points."irene.workflows"]
unified_voice_assistant = "irene.workflows.voice_assistant:UnifiedVoiceAssistantWorkflow"

[project.entry-points."irene.intents.handlers"]
conversation = "irene.intents.handlers.conversation:ConversationIntentHandler"
greetings = "irene.intents.handlers.greetings:GreetingsIntentHandler"
timer = "irene.intents.handlers.timer:TimerIntentHandler"
datetime = "irene.intents.handlers.datetime:DateTimeIntentHandler"
system = "irene.intents.handlers.system:SystemIntentHandler"
random_handler = "irene.intents.handlers.random_handler:RandomIntentHandler"
system_service_handler = "irene.intents.handlers.system_service_handler:SystemServiceIntentHandler"
audio_playback_handler = "irene.intents.handlers.audio_playback_handler:AudioPlaybackIntentHandler"
translation_handler = "irene.intents.handlers.translation_handler:TranslationIntentHandler"
text_enhancement_handler = "irene.intents.handlers.text_enhancement_handler:TextEnhancementIntentHandler"
voice_synthesis_handler = "irene.intents.handlers.voice_synthesis_handler:VoiceSynthesisIntentHandler"
provider_control_handler = "irene.intents.handlers.provider_control_handler:ProviderControlIntentHandler"
speech_recognition_handler = "irene.intents.handlers.speech_recognition_handler:SpeechRecognitionIntentHandler"

[project.entry-points."irene.inputs"]
cli = "irene.inputs.cli:CLIInput"
microphone = "irene.inputs.microphone:MicrophoneInput"
web = "irene.inputs.web:WebInput"



# NOTE: Builtin plugins section removed - no builtin plugins in unified architecture
# All functionality moved to intent handlers with JSON donations

[project.entry-points."irene.runners"]
cli = "irene.runners.cli:CLIRunner"
vosk = "irene.runners.vosk_runner:VoskRunner"
webapi = "irene.runners.webapi_runner:WebAPIRunner"

[tool.setuptools.packages.find]
where = ["."]
include = ["irene*"]
# Fixed: Removed references to non-existent directories
exclude = []

# Fixed: Removed duplicate dev-dependencies section
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
# Fixed: Removed references to non-existent directories
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["irene/tests", "tools"]
# pytest-asyncio: treat bare `async def test_*` as asyncio tests (the suite predates
# pytest-asyncio's strict default; without this ~23 async tests error as "not natively supported").
asyncio_mode = "auto"
filterwarnings = [
    # Pydantic V1-style @validator / class Config across the config + donation models is known
    # tech debt (separate migration); silence the deprecation flood so real signal is visible.
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

# ARCH-5: Hexagonal import contracts (enforced via `lint-imports` and irene/tests/test_import_contracts.py).
# Encodes the rules ARCH-1..4 established so the architecture can't silently regress.
[tool.importlinter]
root_package = "irene"

[[tool.importlinter.contracts]]
name = "Domain (intents) depends on nothing outward (ARCH-1)"
type = "forbidden"
source_modules = ["irene.intents"]
forbidden_modules = [
    "irene.components",
    "irene.workflows",
    "irene.providers",
    "irene.web_api",
    "irene.runners",
    "irene.inputs",
    "irene.outputs",
]
# QUAL-24 (DONE): the `intents.handlers.* -> core.engine` get_core() escape hatch was removed.
# Handlers now depend on domain-owned capability ports (irene/intents/ports.py); the application
# injects the real components inward. No ignore_imports — the domain-clean rule enforces with no hatch.

[[tool.importlinter.contracts]]
name = "Config has no upward imports (ARCH-2)"
type = "forbidden"
source_modules = ["irene.config"]
forbidden_modules = [
    "irene.core",
    "irene.components",
    "irene.providers",
    "irene.workflows",
    "irene.web_api",
    "irene.runners",
    "irene.inputs",
    "irene.outputs",
    "irene.intents",
]

[[tool.importlinter.contracts]]
name = "Components (application) don't import delivery (ARCH-3)"
type = "forbidden"
source_modules = ["irene.components"]
forbidden_modules = [
    "irene.web_api",
    "irene.runners",
    "irene.inputs",
    "irene.outputs",
]

[[tool.importlinter.contracts]]
name = "Only nlu_analysis may import the analysis tooling (ARCH-3)"
type = "forbidden"
source_modules = ["irene.components"]
forbidden_modules = ["irene.analysis"]
ignore_imports = [
    "irene.components.nlu_analysis_component -> irene.analysis.*",
]

[[tool.importlinter.contracts]]
name = "Adapters (providers) don't import application (ARCH-4)"
type = "forbidden"
source_modules = ["irene.providers"]
forbidden_modules = [
    "irene.components",
    "irene.workflows",
]

[[tool.importlinter.contracts]]
name = "Provider categories are independent of each other (ARCH-4)"
type = "independence"
modules = [
    "irene.providers.asr",
    "irene.providers.tts",
    "irene.providers.audio",
    "irene.providers.llm",
    "irene.providers.nlu",
    "irene.providers.voice_trigger",
    "irene.providers.vad",
    "irene.providers.text_processor",
]

[[tool.importlinter.contracts]]
# ARCH-6/SCC-2: the input PORT module must not import its concrete adapters (no base⇄subclass cycle,
# no service-locator). The InputManager orchestrator lives in irene.inputs.manager, which is the input
# layer's composition point and legitimately depends outward on the adapters.
name = "Input port does not import its adapters (ARCH-6 / SCC-2)"
type = "forbidden"
source_modules = ["irene.inputs.base"]
forbidden_modules = [
    "irene.inputs.cli",
    "irene.inputs.microphone",
    "irene.inputs.web",
    "irene.inputs.manager",
]

[[tool.importlinter.contracts]]
# ARCH-11: core depends only on its own ports (irene.core.interfaces), never outward on the
# application/delivery/adapter layers. This REVOKES the ARCH-5 reclassification that left the
# core->{inputs,workflows,components} composition-root edges unenforced. The edges were inverted in
# ARCH-11 S1-S3 (input port + Component/Workflow ports lifted into irene.core.interfaces; all manager
# construction moved to the composition root irene.runners.composition.build_core). NB: irene.core.*
# (e.g. irene.core.components, irene.core.workflow_manager) is NOT irene.components/irene.workflows.
name = "Core does not import the outer layers (ARCH-11)"
type = "forbidden"
source_modules = ["irene.core"]
forbidden_modules = [
    "irene.inputs",
    "irene.outputs",
    "irene.workflows",
    "irene.components",
]

[[tool.importlinter.contracts]]
# ARCH-12: utils is the foundational kernel — it must not reach UP into any application/config/delivery
# layer. The two residual upward edges were removed: utils.vad->core.metrics (a dead import) and
# utils.logging->config.models (the LogLevel enum, relocated INTO utils.logging and re-exported by
# config.models). NB: config.models now depends on utils.logging (downward) — that is the intended
# direction and is allowed.
name = "Utils (foundation) depends on nothing upward (ARCH-12)"
type = "forbidden"
source_modules = ["irene.utils"]
forbidden_modules = [
    "irene.core",
    "irene.config",
    "irene.components",
    "irene.intents",
    "irene.workflows",
    "irene.inputs",
    "irene.outputs",
    "irene.providers",
    "irene.runners",
    "irene.web_api",
]

[tool.mypy]
# Basic settings - detailed configuration in mypy.ini (matching wb-mqtt-bridge)
python_version = "3.11"

# [tool.pyright] removed (QUAL-4): pyrightconfig.json is the single source of truth
# for the standard-mode type gate. Two configs drifted; the JSON one wins when present.

[tool.setuptools.dynamic]
version = {attr = "irene.__version__.__version__"}
